--- a/assets/scss/components/_banktel.scss
+++ b/assets/scss/components/_banktel.scss
@@ -7424,7 +7424,7 @@ input[type="submit"].btn-block,input[type="reset"].btn-block,input[type="button"
   text-decoration:none;
   background-color:transparent;
   background-image:none;
-  filter:progid: DXImageTransform.Microsoft.gradient(enabled=false);
+  // filter:progid: DXImageTransform.Microsoft.gradient(enabled=false);
   cursor:not-allowed
 }
 
@@ -10101,7 +10101,7 @@ p.popover-text {
   background-image:-webkit-linear-gradient(left,color-stop(rgba(0,0,0,0.5) 0%),color-stop(rgba(0,0,0,0.0001) 100%));
   background-image:linear,to right,rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.0001) 100%;
   background-repeat:repeat-x;
-  filter:progid: DXImageTransform.Microsoft.gradient(startColorstr='#80000000',endColorstr='#00000000',GradientType=1)
+  // filter:progid: DXImageTransform.Microsoft.gradient(startColorstr='#80000000',endColorstr='#00000000',GradientType=1)
 }
 
 .carousel-control.right {
@@ -10110,7 +10110,7 @@ p.popover-text {
   background-image:-webkit-linear-gradient(left,color-stop(rgba(0,0,0,0.0001) 0%),color-stop(rgba(0,0,0,0.5) 100%));
   background-image:linear,to right,rgba(0,0,0,0.0001) 0%,rgba(0,0,0,0.5) 100%;
   background-repeat:repeat-x;
-  filter:progid: DXImageTransform.Microsoft.gradient(startColorstr='#00000000',endColorstr='#80000000',GradientType=1)
+  // filter:progid: DXImageTransform.Microsoft.gradient(startColorstr='#00000000',endColorstr='#80000000',GradientType=1)
 }
 
 .carousel-control:hover,.carousel-control:focus {
@@ -10643,10 +10643,9 @@ th.visible-print,td.visible-print {
 }
 
 .chosen-container-single .chosen-drop {
-/*  margin-top: -1px;
-*/
   margin-top:35px;
-  background-clip:padding-box
+  background-clip:padding-box;
+  height: 175px;
 }
 
 .grid-form .chosen-container-single .chosen-drop {
@@ -10669,11 +10668,9 @@ th.visible-print,td.visible-print {
   background:#f1f2f2;
   color:#6d6e71;
   position:relative;
-  overflow-x:hidden;
-  overflow-y:auto;
+  overflow: hidden;
   margin:0;
   padding:0;
-  max-height:186px;
 }
 
 .chosen-container .chosen-results li {
@@ -19599,6 +19596,17 @@ background-color: rgba(136, 136, 136, 0.9);
 background-color: rgba(136, 136, 136, 0.9);
   filter:alpha(opacity=90);
   -ms-filter:alpha(opacity=90);
+}
+
+.modal .mCSB_container {
+  overflow: hidden;
+  width: auto;
+  height: auto;
+  /* min-height: 100%; */
+  display: table;
+  height: 100%;
+  width: 100%;
+  pointer-events: none;
 }
 
 /* ---------------------------------------------
